# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
brain_games/: __init__.py  ask_user.py  cli.py  engine.py  make_calcs.py  say_to_user.py  talk_to_user.py
brain_games/functions/: ask_user.py  make_calcs.py  say_to_user.py
brain_games/games/: ask_user.py  calc.py  constants.py  even.py  gcd.py  make_calcs.py  prime.py  progression.py  say_to_user.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
ivekhov_brain_games.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py
