[tool.poetry]
name = "ivekhov_brain_games"
version = "0.1.6"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
isort = "4.3.5"
wemake-python-styleguide = "^0.14.0"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-games = "brain_games.scripts.brain_games:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

