[tool.poetry]
name = "ivekhov_brain_games"
version = "0.1.20"
description = "Study package made on Hexlet Project #1 in Python programmer profession with simple games in CLI."
authors = ["Ivan Vekhov <ivekhov@gmail.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://test.pypi.org/project/ivekhov-brain-games/"
classifiers = [
    "Topic :: Games/Entertainment",
    "Topic :: Education :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
isort = "4.3.5"
flake8 = "^3.8"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
